[gd_scene load_steps=5 format=3 uid="uid://cm550g3ucpx4k"]

[ext_resource type="Script" path="res://ui/menus/layouts/main_menu.gd" id="1_w5nt6"]
[ext_resource type="PackedScene" uid="uid://dxapajbsngnmj" path="res://ui/menus/settings/settings_menu.tscn" id="2_1rfok"]
[ext_resource type="PackedScene" uid="uid://c3livqvnicrbc" path="res://ui/menus/layouts/new_game_menu.tscn" id="3_rktwx"]

[sub_resource type="LabelSettings" id="LabelSettings_wdh1h"]
font_size = 48
font_color = Color(1, 1, 0.552941, 1)

[node name="MenuCanvasLayer" type="CanvasLayer"]
script = ExtResource("1_w5nt6")

[node name="MainMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="MainMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0562916, 0.0562916, 0.0562916, 1)

[node name="MainMenuContent" type="MarginContainer" parent="MainMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="MarginContainer" type="MarginContainer" parent="MainMenu/MainMenuContent"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/margin_top = 30

[node name="TitleLabel" type="Label" parent="MainMenu/MainMenuContent/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "GAME_TITLE"
label_settings = SubResource("LabelSettings_wdh1h")

[node name="ExitGameButton" type="Button" parent="MainMenu/MainMenuContent"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
text = "MENU_EXIT_GAME"

[node name="VersionLabel" type="Label" parent="MainMenu/MainMenuContent"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
text = "v1.0.0"

[node name="MainMenuButtons" type="CenterContainer" parent="MainMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/MainMenuButtons"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="StartGameButton" type="Button" parent="MainMenu/MainMenuButtons/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "MENU_START"

[node name="SettingsButton" type="Button" parent="MainMenu/MainMenuButtons/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "MENU_SETTINGS"

[node name="CreditsButton" type="Button" parent="MainMenu/MainMenuButtons/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "MENU_CREDITS"

[node name="GameSettingsUI" parent="." instance=ExtResource("2_1rfok")]
visible = false

[node name="NewGameMenu" parent="." instance=ExtResource("3_rktwx")]
visible = false
